--- a/index.html
+++ b/index.html
@@ -432,6 +432,19 @@
 			</a>
                     </div>
                 </li>
+		    
+		<li class="book-item">
+                    <img src="https://ipfs.io/ipfs/QmPdCq9uciGvoG2NoMYvSGBwJkx3QeQC6921WUhotGcxad" alt="Ebook Icon">
+                    <span>Affiliate Marketing 101 The Ultimate Beginner’s Guide to Passive Income</span>
+                    <div class="icons">
+                        <a href="https://ipfs.io/ipfs/QmQAYsQibUBafexgSnKw8XPKaxTa4R3oiYVRa3Mn8NFabr" target="_blank">
+                        <img src="pdf-icon.png" alt="PDF Icon" class="icon">
+			</a>
+                        <a href="https://ipfs.io/ipfs/QmP3VtyF7LaJe42ry3LZ597CNoaQLGJRcr1U3fidsGpXm4" target="_blank">
+                        <img src="epub-icon.png" alt="EPUB Icon" class="icon">
+			</a>
+                    </div>
+                </li>
                 <!-- More books can be added here -->
             </ul>
         </div>
