--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
 		    
 		<li class="book-item">
                     <img src="https://ipfs.io/ipfs/QmPdCq9uciGvoG2NoMYvSGBwJkx3QeQC6921WUhotGcxad" alt="Ebook Icon">
-                    <span>Affiliate Marketing 101 The Ultimate Beginner’s Guide to Passive Income</span>
+                    <span>Affiliate Marketing Mastery: A Practical Guide to Building Online Income</span>
                     <div class="icons">
                         <a href="https://ipfs.io/ipfs/QmQAYsQibUBafexgSnKw8XPKaxTa4R3oiYVRa3Mn8NFabr" target="_blank">
                         <img src="pdf-icon.png" alt="PDF Icon" class="icon">
