--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             color: #333;
         }
         header {
-            background-color: #000;
+            background-color: #fff;
             color: #fff;
             text-align: center;
             padding: 15px 0;
@@ -99,7 +99,7 @@
             margin: 10px 0 0;
         }
         nav {
-            background-color: #007bff;
+            background-color: #000;
             padding: 10px;
             display: flex;
             justify-content: center;
@@ -137,7 +137,7 @@
             margin-top: 30px;
         }
         .cta a {
-            background-color: #007bff;
+            background-color: #000;
             color: #fff;
             padding: 10px 20px;
             text-decoration: none;
