--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             color: #333;
         }
         header {
-            background-color: #fff;
+            background-color: #000;
             color: #fff;
             text-align: center;
             padding: 15px 0;
