--- a/about.html
+++ b/about.html
@@ -107,7 +107,7 @@
             margin: 10px 0 0;
         }
         nav {
-            background-color: #007bff;
+            background-color: #000;
             padding: 10px;
             display: flex;
             justify-content: center;
