--- a/services.html
+++ b/services.html
@@ -97,7 +97,7 @@
             margin: 10px 0 0;
         }
         nav {
-            background-color: #007bff;
+            background-color: #000;
             padding: 10px;
             display: flex;
             justify-content: center;
