--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 
         /* Button to trigger modal */
         .show-ebooks-btn {
-            background-color: #007bff;
+            background-color: #000;
             color: white;
             padding: 10px 20px;
             border: none;
@@ -256,7 +256,7 @@
         }
 
 	.show-projects-btn {
-            background-color: #007bff;
+            background-color: #000;
             color: white;
             padding: 10px 20px;
             border: none;
@@ -270,7 +270,7 @@
             background-color: #0056b3;
         }
 	.show-donations-btn {
-            background-color: #007bff;
+            background-color: #000;
             color: white;
             padding: 5px 10px;
             border: none;
