--- a/index.html
+++ b/index.html
@@ -374,8 +374,11 @@
         <a href="https://thqcyberdivision.github.io/services.html">Services</a>
     </nav>
     <main>
-        <h1>Empowering Your Digital Transformation</h1>
-        <p>At THQ Cyber Division Unincorporated, we specialize in delivering top-notch IT solutions tailored to your unique needs. From business analysis to web development, cybersecurity, and automation, our expertise ensures your organization thrives in today's fast-paced digital environment.</p>
+        <h1>Empowering Your Productivity </h1>
+        <p>Welcome to THQ Cyber Division Unincorporated
+At THQ Cyber Division Unincorporated, we offer a range of virtual assistant services designed to support your business and personal needs. Our team of skilled professionals is dedicated to providing top-notch support, allowing you to focus on what matters most.</p>
+<h1>Get Started</h1>
+<p>Whether you need help with document writing, proofreading, data entry, or research, we're here to support you. Contact us today to learn more about our virtual assistant services.</p>
         
         <!-- Button to show ebooks modal -->
         <button class="show-ebooks-btn" onclick="openModal()">Browse Ebooks</button>
