--- a/about.html
+++ b/about.html
@@ -171,9 +171,12 @@
     </nav>
     <main>
         <h1>Our Mission and Vision</h1>
-        <p>THQ Cyber Division Unincorporated is a forward-thinking IT solutions provider dedicated to empowering businesses and individuals through innovative technology. Our mission is to help clients navigate the ever-changing digital landscape, optimizing their operations and securing their digital presence.</p>
+        <p>At THQ Cyber Division Unincorporated, we're driven by a passion for delivering high-quality virtual assistant services. Our mission is to empower businesses and individuals by providing personalized support that helps them achieve their goals.
+</p>
         <h2>Why Choose Us?</h2>
-        <p>We stand out for our commitment to excellence, cutting-edge solutions, and customer-focused approach. Our team of experts is always ready to deliver tailored IT services, whether you're a startup, a small business, or a large corporation.</p>
+        <p><b>Personalized Support</b>: Our team of virtual assistants is dedicated to providing personalized support tailored to your specific needs.
+<b>Expertise</b>: We have extensive experience in providing virtual assistant services.
+<b>Flexibility</b>: Our services are designed to be flexible, allowing you to work with us in a way that suits your schedule and needs.</p>
 		
         <h2>Who We Are</h2>
         <p>THQ Cyber Division Unincorporated is a leading provider of IT services, delivering innovative, secure, and efficient solutions for businesses of all sizes. Our mission is built on integrity, excellence, and innovation to empower organizations to thrive in today's digital landscape.</p>
