--- a/services.html
+++ b/services.html
@@ -170,19 +170,24 @@
         <a href="https://thqcyberdivision.github.io/services.html">Services</a>
     </nav>
     <main>
+Virtual Assistant Services
         <h1>Explore Our Expertise</h1>
-        <p>At THQ Cyber Division, we offer a wide range of IT services tailored to your business needs:</p>
+        <p>At THQ Cyber Division Unincorporated, we offer a range of virtual assistant services designed to support your business and personal needs. Our services include:</p>
         <ul>
             <li><strong>Business Analysis:</strong> In-depth analysis of your business to help streamline processes and improve efficiency.</li>
-            <li><strong>Web Development:</strong> Full-stack web development solutions using the latest technologies, including Flask and ZeroNet.</li>
-            <li><strong>Cybersecurity:</strong> Protecting your digital assets with state-of-the-art security measures.</li>
-            <li><strong>Automation Solutions:</strong> Implementing automation to save time, reduce costs, and improve accuracy.</li>
-            <li><strong>GPG Key Management:</strong> Secure management of GPG keys for encrypted communication and file handling.</li>
-            <li><strong>Consulting:</strong> Expert IT consulting services to help you plan, implement, and maintain your digital infrastructure.</li>
-            <li><strong>Graphic and Web Design:</strong> Creative design services for a professional and engaging online presence.</li>
+            <li><strong>Document Writing:</strong> Professional writing services for documents, reports, and articles.</li>
+            <li><strong>Proofreading:</strong> Meticulous proofreading to ensure error-free documents.</li>
+            <li><strong>Data Entry:</strong> Accurate and efficient data entry services to help you manage your data.</li>
+            <li><strong>Research:</strong> *: Research services to provide valuable insights and information.</li>
+            <li><strong>Calendar Organization:</strong> Calendar organization services to ensure you're always on schedule.</li>
+            <li><strong>Email Management:</strong> Effective email management to help you stay organized.</li>
             <li><strong>Remote Support:</strong> Expert technical support at your convenience, wherever you are.</li>
 
         </ul>
+<h1>Benefits of Our Services</h1><p>
+-<strong>Increased Productivity</strong>: By outsourcing tasks to us, you can focus on high-priority projects and activities.
+- <strong>Improved Accuracy</strong>: Our attention to detail ensures high-quality work, reducing errors and stress.
+- <strong>Flexibility</strong>: Our virtual assistant services are available on-demand, allowing you to work at your own pace.</p><br/>
 	<p>Please support our ebooks by making a donation.</p>
 	    <ul>
 		    <li><i>DAI/USDT/USDC contracts</i>: 0x4e2d6B629dC5d5336Ab8C241860Ad4a189d3E0B1</li>
