--- a/services.html
+++ b/services.html
@@ -162,7 +162,7 @@
          <a href="https://thqcyberdivision.github.io/index.html">
         <img src="https://thqcyberdivision.github.io/logo.png" alt="THQ Logo">
 	     </a>
-        <h1>Our Services</h1>
+        <h1>Our Virtual Assistant Services</h1>
     </header>
     <nav>
         <a href="https://thqcyberdivision.github.io/index.html">Home</a>
@@ -170,7 +170,7 @@
         <a href="https://thqcyberdivision.github.io/services.html">Services</a>
     </nav>
     <main>
-Virtual Assistant Services
+
         <h1>Explore Our Expertise</h1>
         <p>At THQ Cyber Division Unincorporated, we offer a range of virtual assistant services designed to support your business and personal needs. Our services include:</p>
         <ul>
@@ -178,7 +178,7 @@ Virtual Assistant Services
             <li><strong>Document Writing:</strong> Professional writing services for documents, reports, and articles.</li>
             <li><strong>Proofreading:</strong> Meticulous proofreading to ensure error-free documents.</li>
             <li><strong>Data Entry:</strong> Accurate and efficient data entry services to help you manage your data.</li>
-            <li><strong>Research:</strong> *: Research services to provide valuable insights and information.</li>
+            <li><strong>Research:</strong> Research services to provide valuable insights and information.</li>
             <li><strong>Calendar Organization:</strong> Calendar organization services to ensure you're always on schedule.</li>
             <li><strong>Email Management:</strong> Effective email management to help you stay organized.</li>
             <li><strong>Remote Support:</strong> Expert technical support at your convenience, wherever you are.</li>
