--- a/about.html
+++ b/about.html
@@ -90,6 +90,11 @@
             padding: 0;
             background-color: #f5f5f5;
             color: #333;
+	    
+            background-image: url('website_cover.jpg');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
         }
         header {
             background-color: #000;
