--- a/index.html
+++ b/index.html
@@ -345,8 +345,8 @@
 	    border-radius: 5px; /* Optional, to round the corners of the image */
 	}
 	.modal-image {
-	  max-width: 100%;
-	  height: auto;
+	  max-width: 70%;
+	  height: 50%;
 	  display: block;
 	  margin: 0 auto 20px;
 	  border-radius: 8px;
@@ -557,7 +557,7 @@ At THQ Cyber Division Unincorporated, we offer a range of virtual assistant serv
                 `;
             }else if (projectId === 'CKS Collection') {
 		    projectDetails = `
-      			<img src="Logo.png" alt="CKS Collection Thumbnail" class="project-thumbnail" class="modal-image">
+      			<img src="Logo.png" alt="CKS Collection Thumbnail" class="project-thumbnail" class="modal-image" />
 		        <p><b>Project Name:</b> CKS Collection Unincorporated</p><br/>
 		        <p><b>Objective:</b> To showcase and supply high-quality natural gemstones, including Sapphire, Spinel, Ruby, Emerald, Tourmaline, Morganite, and Garnet, through a trusted and accessible online platform: <a href="https://cksfashioncollection.sell.app" target="_blank">cksfashioncollection.sell.app</a>.</p><br/>
 			
