--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@ At THQ Cyber Division Unincorporated, we offer a range of virtual assistant serv
                 `;
             }else if (projectId === 'CKS Collection') {
 		    projectDetails = `
-      			<img src="Logo.png" alt="CKS Collection Thumbnail" class="project-thumbnail" class="modal-image" />
+      			<img src="https://ipfs.io/ipfs/QmUz5httEH63hbbRU5tnK7m6ePK92UJBorGXNzJxr6J46x" alt="CKS Collection Thumbnail" class="modal-image">
 		        <p><b>Project Name:</b> CKS Collection Unincorporated</p><br/>
 		        <p><b>Objective:</b> To showcase and supply high-quality natural gemstones, including Sapphire, Spinel, Ruby, Emerald, Tourmaline, Morganite, and Garnet, through a trusted and accessible online platform: <a href="https://cksfashioncollection.sell.app" target="_blank">cksfashioncollection.sell.app</a>.</p><br/>
 			
