--- a/about.html
+++ b/about.html
@@ -159,6 +159,17 @@
         footer img:hover {
             opacity: 0.7;
         }
+	
+	.overlay-tile {
+	    background-color: rgba(255, 255, 255, 0.8); /* white with 80% opacity */
+	    padding: 20px;
+	    border-radius: 10px;
+	    display: inline-block;
+	    margin-top: 20px;
+	    max-width: 800px;
+	    margin-left: auto;
+	    margin-right: auto;
+	}
     </style>
 </head>
 <body>
@@ -174,6 +185,7 @@
         <a href="https://thqcyberdivision.github.io/services.html">Services</a>
     </nav>
     <main>
+	<div class="overlay-tile">
         <h1>Our Mission and Vision</h1>
         <p>At THQ Cyber Division Unincorporated, we're driven by a passion for delivering high-quality virtual assistant services. Our mission is to empower businesses and individuals by providing personalized support that helps them achieve their goals.
 </p>
@@ -187,6 +199,7 @@
        
         <h3>Our Vision</h3>
         <p>To be a globally recognized IT solutions leader, renowned for our commitment to innovation, quality, and exceptional client service.</p>
+	</div>
     </main>
     <footer>
         <p>&copy; 2024 - 2025 THQ Cyber Division Unincorporated. All rights reserved.</p>
