--- a/services.html
+++ b/services.html
@@ -152,6 +152,17 @@
         footer img:hover {
             opacity: 0.7;
         }
+	
+	.overlay-tile {
+	    background-color: rgba(255, 255, 255, 0.8); /* white with 80% opacity */
+	    padding: 20px;
+	    border-radius: 10px;
+	    display: inline-block;
+	    margin-top: 20px;
+	    max-width: 800px;
+	    margin-left: auto;
+	    margin-right: auto;
+	}
     </style>
 </head>
 <body>
@@ -175,7 +186,7 @@
         <a href="https://thqcyberdivision.github.io/services.html">Services</a>
     </nav>
     <main>
-
+	<div class="overlay-tile">
         <h1>Explore Our Expertise</h1>
         <p>At THQ Cyber Division Unincorporated, we offer a range of virtual assistant services designed to support your business and personal needs. Our services include:</p>
         <ul>
@@ -198,6 +209,7 @@
 		    <li><i>DAI/USDT/USDC contracts</i>: 0x4e2d6B629dC5d5336Ab8C241860Ad4a189d3E0B1</li>
 	    </ul>
 	<p>Your contribution will be valuable.</p>
+    </div>
     </main>
     <footer>
         <p>&copy; 2024 - 2025 THQ Cyber Division Unincorporated. All rights reserved.</p>
