--- a/services.html
+++ b/services.html
@@ -1,11 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="THQ Cyber Division Unincorporated is a leading IT solutions provider offering innovative, secure, and efficient technology services for businesses of all sizes. Empower your business with our expertise.">
-    <meta name="keywords" content="THQ Cyber Division, IT solutions, technology services, digital transformation, cybersecurity, innovative IT services">
-    <meta name="author" content="THQ Cyber Division Unincorporated">
+    	<!-- Basic Meta Tags -->
+<title>Services | THQ Cyber Division Unincorporated</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="THQ Cyber Division Unincorporated offers premium virtual assistant services including document writing, proofreading, data entry, and remote IT support.">
+<meta name="keywords" content="virtual assistant, document writing, proofreading, data entry, research, IT support, THQ Cyber Division">
+<meta name="author" content="THQ Cyber Division Unincorporated">
+
+<!-- Open Graph Tags -->
+<meta property="og:title" content="Virtual Services | THQ Cyber Division Unincorporated">
+<meta property="og:description" content="Empowering your productivity with reliable virtual assistant and IT support services.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://thqcyberdivision.github.io/">
+<meta property="og:image" content="https://ipfs.io/ipfs/QmNeSC4iXfe5NiHhuFJ8jqLnEFxFTXRziQjEbwrbXJz5UC">
+
+<!-- Twitter Card Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="THQ Cyber Division Unincorporated">
+<meta name="twitter:description" content="Explore expert virtual assistant and remote IT services.">
+<meta name="twitter:image" content="https://ipfs.io/ipfs/QmNeSC4iXfe5NiHhuFJ8jqLnEFxFTXRziQjEbwrbXJz5UC">
+
+<script type="application/ld+json">
+	{
+	  "@context": "https://schema.org",
+	  "@type": "Organization",
+	  "name": "THQ Cyber Division Unincorporated",
+	  "url": "https://thqcyberdivision.github.io/",
+	  "logo": "https://thqcyberdivision.github.io/logo.png",
+	  "description": "THQ Cyber Division Unincorporated provides virtual assistant and IT support services worldwide, helping individuals and businesses increase productivity with expert support.",
+	  "sameAs": [
+	    "https://github.com/thqcyberdivision"
+	  ],
+	  "contactPoint": {
+	    "@type": "ContactPoint",
+	    "contactType": "Customer Support",
+	    "email": "thqcs@protonmail.com",
+	    "areaServed": "Worldwide",
+	    "availableLanguage": ["English"]
+	  }
+	}
+</script>
+
+
     <link rel="manifest" href="https://thqcyberdivision.github.io/manifest.json">
     <meta name="theme-color" content="#007bff">
 
@@ -164,6 +202,7 @@
 	    margin-right: auto;
 	}
     </style>
+
 </head>
 <body>
 	<div id="google_translate_element"></div>
