--- a/index.html
+++ b/index.html
@@ -25,6 +25,26 @@
 <link rel="manifest" href="https://thqcyberdivision.github.io/manifest.json">
 <meta name="theme-color" content="#007bff">
     
+<script type="application/ld+json">
+	{
+	  "@context": "https://schema.org",
+	  "@type": "Organization",
+	  "name": "THQ Cyber Division Unincorporated",
+	  "url": "https://thqcyberdivision.github.io/",
+	  "logo": "https://thqcyberdivision.github.io/logo.png",
+	  "description": "THQ Cyber Division Unincorporated provides virtual assistant and IT support services worldwide, helping individuals and businesses increase productivity with expert support.",
+	  "sameAs": [
+	    "https://github.com/thqcyberdivision"
+	  ],
+	  "contactPoint": {
+	    "@type": "ContactPoint",
+	    "contactType": "Customer Support",
+	    "email": "thqcs@protonmail.com",
+	    "areaServed": "Worldwide",
+	    "availableLanguage": ["English"]
+	  }
+	}
+</script>
 
 <script>
         // Register the service worker
