--- a/index.html
+++ b/index.html
@@ -545,14 +545,13 @@ At THQ Cyber Division Unincorporated, we offer a range of virtual assistant serv
                 </li>
 		<!-- Project 2 -->
 		<li class="project-item" onmouseover="showProjectInfo('Real Value Hub')" onmouseout="hideProjectInfo()">
-		    <!--<img src="https://ipfs.io/ipfs/QmSmY2s33HTd72VQy68hcPjugTk52ryc7yZjQem68xc8sW" alt="THQ Temple Thumbnail" class="project-thumbnail"> -->
-		    <span class="project-name" onclick="openProjectDetails('Real Value Hub')"><img src="https://ipfs.io/ipfs/QmSmY2s33HTd72VQy68hcPjugTk52ryc7yZjQem68xc8sW" alt="THQ Temple Thumbnail" class="project-thumbnail" title='Affiliate Marketing' </span>
+		     <img src="https://ipfs.io/ipfs/QmSmY2s33HTd72VQy68hcPjugTk52ryc7yZjQem68xc8sW" alt="THQ Temple Thumbnail" class="project-thumbnail">
+		    <span class="project-name" onclick="openProjectDetails('Real Value Hub')">Affiliate Marketing: Promoting Products, Platforms & Passive Income </span>
 		</li>
 				<!-- Project 1 -->
 		<li class="project-item" onmouseover="showProjectInfo('CKS Collection')" onmouseout="hideProjectInfo()">
-		 <!--   <img src="Logo.png" alt="CKS Collection Thumbnail" class="project-thumbnail"> -->
-		    <span class="project-name" onclick="openProjectDetails('CKS Collection')"><img src="Logo.png" alt="CKS Collection Thumbnail" class="project-thumbnail" title="Jewelry Stores" /></span>
-		</li>
+		  <img src="https://ipfs.io/ipfs/QmSmY2s33HTd72VQy68hcPjugTk52ryc7yZjQem68xc8sW" alt="THQ Temple Thumbnail" class="project-thumbnail">
+		    <span class="project-name" onclick="openProjectDetails('Real Value Hub')">Affiliate Marketing: Promoting Products, Platforms & Passive Income </span>		</li>
             </ul>
         </div>
     </div>
