--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
 <meta name="description" content="THQ Cyber Division Unincorporated offers premium virtual assistant services including document writing, proofreading, data entry, and remote IT support.">
 <meta name="keywords" content="virtual assistant, document writing, proofreading, data entry, research, IT support, THQ Cyber Division">
 <meta name="author" content="THQ Cyber Division Unincorporated">
+<meta name="google-site-verification" content="Nx8hQYvwpEVXpzDwblQT1xmLanPVBfI_JmBMlXvbBVQ" />
 
 <!-- Open Graph Tags -->
 <meta property="og:title" content="About Us | THQ Cyber Division Unincorporated">
