--- a/index.html
+++ b/index.html
@@ -576,6 +576,36 @@ At THQ Cyber Division Unincorporated, we offer a range of virtual assistant serv
             <div id="projectDetailsContent"></div>
         </div>
     </div>
+
+<section id="newsletter" style="background:#f5f5f5; padding:20px; margin:20px 0; text-align:center; border-radius:8px;">
+  <h2>📬 Stay Updated!</h2>
+  <p>Enter your email to receive exclusive opportunities and the latest offers.</p>
+  <form
+  action="https://formspree.io/f/mnnvzaaz"
+  method="POST"
+  style="max-width:400px; margin:0 auto;"
+>
+  <input
+    type="email"
+    name="email"
+    placeholder="Your email address"
+    required
+    style="width:100%; padding:10px; margin-bottom:10px; border:1px solid #ccc; border-radius:4px;"
+  />
+
+  <!-- Optional: Add a subject line to the email notification -->
+  <input type="hidden" name="_subject" value="New Newsletter Signup!">
+  <button
+    type="submit"
+    style="padding:10px 20px; background-color:#1a73e8; color:#fff; border:none; border-radius:4px; cursor:pointer;"
+  >
+    Subscribe
+  </button>
+</form>
+ <p style="font-size:12px; color:#666; margin-top:10px;">
+    We respect your privacy. No spam—only exclusive deals and referral links.
+  </p>
+</section>
     <footer>
         <p>&copy; 2024 - 2025 THQ Cyber Division Unincorporated. All rights reserved.</p>
         <a href="mailto:thqcs@protonmail.com">
