--- a/index.html
+++ b/index.html
@@ -592,6 +592,9 @@ At THQ Cyber Division Unincorporated, we offer a range of virtual assistant serv
     required
     style="width:100%; padding:10px; margin-bottom:10px; border:1px solid #ccc; border-radius:4px;"
   />
+  <!-- Redirect to your homepage after submission -->
+  <input type="hidden" name="_redirect" value="https://thqcyberdivision.github.io">
+  <input type="hidden" name="_next" value="https://thqcyberdivision.github.io">
 
   <!-- Optional: Add a subject line to the email notification -->
   <input type="hidden" name="_subject" value="New Newsletter Signup!">
