--- a/index.html
+++ b/index.html
@@ -551,9 +551,9 @@ At THQ Cyber Division Unincorporated, we offer a range of virtual assistant serv
                     <span class="project-name" onclick="openProjectDetails('Project 2')">Project 2: Green Energy Research</span>
                 </li>
 		<!-- Project 2 -->
-		<li class="project-item" onmouseover="showProjectInfo('Real Value Hub')" onmouseout="hideProjectInfo()">
+		<li class="project-item" onmouseover="showProjectInfo('THQ Value Hub')" onmouseout="hideProjectInfo()">
 		     <img src="https://ipfs.io/ipfs/QmSmY2s33HTd72VQy68hcPjugTk52ryc7yZjQem68xc8sW" alt="THQ Temple Thumbnail" class="project-thumbnail">
-		    <span class="project-name" onclick="openProjectDetails('Real Value Hub')">Affiliate Marketing: Promoting Products, Platforms & Passive Income </span>
+		    <span class="project-name" onclick="openProjectDetails('Real Value Hub')">Value Based Marketing: Promoting real world Products, Platforms & Information.</span>
 		</li>
 				<!-- Project 1 -->
 		<li class="project-item" onmouseover="showProjectInfo('CKS Collection')" onmouseout="hideProjectInfo()">
@@ -674,8 +674,8 @@ At THQ Cyber Division Unincorporated, we offer a range of virtual assistant serv
 		}else if (projectId === 'Real Value Hub') {
 		    projectDetails = `
       			<img src="https://ipfs.io/ipfs/QmSmY2s33HTd72VQy68hcPjugTk52ryc7yZjQem68xc8sW" alt="THQ Temple Thumbnail" class="modal-image">
-		        <p><b>Project Name:</b> Real Value Hub</p><br/>
-		        <p><b>Objective:</b> To provide curated affiliate links and content that bridge tangible goods and crypto-earning opportunities, enabling individuals and small brands to monetize web traffic while exploring digital income streams. <a href="https://thq-temple.neocities.org/" target="_blank">Real Value Hub</a></p><br/>
+		        <p><b>Project Name:</b> THQ Value Hub</p><br/>
+		        <p><b>Objective:</b> To provide curated affiliate links and content that bridge tangible goods and crypto-earning opportunities, enabling individuals and small brands to monetize web traffic while exploring digital income streams. <a href="https://thq-temple.neocities.org/" target="_blank">THQ Value Hub</a></p><br/>
 		
 		        <p><b>Key Features:</b></p><br/>
 		        <p>
@@ -694,7 +694,7 @@ At THQ Cyber Division Unincorporated, we offer a range of virtual assistant serv
 		
 		        <p><b>Support Needed:</b> Collaboration with affiliate platforms, traffic generation, and content writing support for growth and sustainability.</p><br/>
 		
-		        <p><b>Impact:</b> Real Value Hub showcases how personal blogs can ethically earn crypto and commissions while connecting users with trusted tools and services that solve real-world problems.</p><br/>
+		        <p><b>Impact:</b> THQ Value Hub showcases how personal blogs can ethically earn crypto and commissions while connecting users with trusted tools and services that solve real-world problems.</p><br/>
 		
 		        <center><button class="show-donations-btn" onclick="showQRCode('ETH_Address_5')">Donate</button></center>
 		    `;
