--- a/index.html
+++ b/index.html
@@ -454,8 +454,7 @@
     <main>
 	<div class="overlay-tile">
         <h1>Empowering Your Productivity </h1>
-        <p>Welcome to THQ Cyber Division Unincorporated
-At THQ Cyber Division Unincorporated, we offer a range of virtual assistant services designed to support your business and personal needs. Our team of skilled professionals is dedicated to providing top-notch support, allowing you to focus on what matters most.</p>
+        <p>At THQ Cyber Division Unincorporated, we offer a range of virtual assistant services designed to support your business and personal needs. Our team of skilled professionals is dedicated to providing top-notch support, allowing you to focus on what matters most.</p>
 <h1>Get Started</h1>
 <p>Whether you need help with document writing, proofreading, data entry, or research, we're here to support you. Contact us today to learn more about our virtual assistant services.</p>
 	
